--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "start": "node app.js"
   },
   "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "https:///github.com/MMaartenvanWilligen/nonprofit_wallet.git"
+  },
   "author": "anonymous node/sails user",
   "license": ""
 }
