--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-watch": "1.0.0",
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
+    "helmet": "^3.9.0",
     "include-all": "^1.0.0",
     "rc": "1.0.1",
     "sails": "~0.12.14",
